--- a/.github/workflows/main_sonar-v2.yml
+++ b/.github/workflows/main_sonar-v2.yml
@@ -18,9 +18,7 @@ jobs:
           go-version: 1.18
 
       - name: Build
-        # run: go build -v ./...
-        run: bash devops/builds.sh
+        run: cd sonar-v2 && go build -v ./...
 
       - name: Test
-        # run: go test -v ./...
-        run: bash devops/tests.sh
+        run: cd sonar-v2 && go test -v ./...
