Experimenting with devops/ directory.

--- a/.github/workflows/main_sonar-v2.yml
+++ b/.github/workflows/main_sonar-v2.yml
@@ -18,7 +18,9 @@ jobs:
           go-version: 1.18
 
       - name: Build
-        run: cd sonar-v2 && go build -v ./...
+        # run: go build -v ./...
+        run: bash devops/builds.sh
 
       - name: Test
-        run: cd sonar-v2 && go test -v ./...
+        # run: go test -v ./...
+        run: bash devops/tests.sh
