--- a/code-editor/package.json
+++ b/code-editor/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "react-simple-code-editor": "^0.13.0",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/prismjs": "^1.26.0",
     "autoprefixer": "^10.4.11",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
